# terminal-markup-language

./: .gitignore  CMakeLists.txt  README.md  tmlspec.md  tslspec.md
include/: .ast.h.swo  ast.h  ast_internal.h  colours.h  errors.h  filesystem.h  iarray.h  parser.h  parser_actions.h  parser_internal.h
include/tml/: errors.h
include/tml/ast/: ast.h
include/tml/parser/: parser.h
include/tsl/: execute_instructions.h  function.h  instructions.h  parser.h  parser_actions.h  parser_internal.h  tsl.h  variable.h
include/tsl/instructions/: execute_instructions.h  instructions.h  instructions_add_function_arg.h  instructions_create_function.h  instructions_create_return_value.h  instructions_create_var.h  instructions_store_literal.h  instructions_store_var.h
include/tsl/parser/: parser.h  parser_actions.h  parser_instructions.h  parser_instructions_internal.h  parser_internal.h
src/: .ast.c.swo  CMakeLists.txt  ast.c  ast_internal.c  colours.c  errors.c  filesystem.c  iarray.c  parser.c  parser_actions.c  parser_internal.c  tml.c
src/tml/: CMakeLists.txt  errors.c
src/tml/parser/: parser_actions.c
src/tsl/: CMakeLists.txt  execute_instructions.c  function.c  instructions.c  parser.c  tsl.c  variable.c
src/tsl/instructions/: execute_instructions.c  instructions.c  instructions_add_function_arg.c  instructions_create_function.c  instructions_create_return_value.c  instructions_create_var.c  instructions_store_literal.c  instructions_store_var.c
src/tsl/parser/: parser.c  parser_actions.c  parser_instructions.c  parser_instructions_internal.c  parser_internal.c
test/: CMakeLists.txt
test/ast/: .ast_create.c.swo  CMakeLists.txt  ast_create.c
test/parser/: CMakeLists.txt  parse_root.c  parse_root.tml
test/tsl/: CMakeLists.txt  tslsandbox.c
test/tsl/functions/: CMakeLists.txt
test/tsl/functions/int/: CMakeLists.txt  tsl_func_duplicate_args.c  tsl_func_no_args.c  tsl_func_no_return.c  tsl_func_return_literal.c  tsl_func_return_wrong_type.c  tsl_func_with_args.c
test/tsl/variables/: CMakeLists.txt
test/tsl/variables/bool/: CMakeLists.txt  tsl_var_already_exists.c  tsl_var_assign_invalid_var.c  tsl_var_assign_var_different_type.c  tsl_var_assign_var_same_type.c  tsl_var_empty_name.c  tsl_var_empty_value.c  tsl_var_false_value.c  tsl_var_invalid_name.c  tsl_var_true_value.c  tsl_var_uninitialized_value.c  tsl_var_valid_names.c
test/tsl/variables/float/: CMakeLists.txt  tsl_var_already_exists.c  tsl_var_assign_invalid_var.c  tsl_var_assign_var_different_type.c  tsl_var_assign_var_same_type.c  tsl_var_empty_name.c  tsl_var_empty_value.c  tsl_var_float_no_decimal.c  tsl_var_invalid_name.c  tsl_var_invalid_value.c  tsl_var_negative_value.c  tsl_var_positive_value.c  tsl_var_uninitialized_value.c  tsl_var_valid_names.c
test/tsl/variables/int/: CMakeLists.txt  tsl_var_already_exists.c  tsl_var_assign_invalid_var.c  tsl_var_assign_var_different_type.c  tsl_var_assign_var_same_type.c  tsl_var_empty_name.c  tsl_var_empty_value.c  tsl_var_int_with_decimal.c  tsl_var_invalid_name.c  tsl_var_invalid_value.c  tsl_var_negative_int.c  tsl_var_negative_value.c  tsl_var_positive_value.c  tsl_var_uninitialized_value.c  tsl_var_valid_names.c
test/tsl/variables/string/: CMakeLists.txt  tsl_var_already_exists.c  tsl_var_assign_invalid_var.c  tsl_var_assign_var_different_type.c  tsl_var_assign_var_same_type.c  tsl_var_empty_name.c  tsl_var_empty_value.c  tsl_var_string_noquotes.c  tsl_var_string_valid.c  tsl_var_uninitialized_value.c  tsl_var_valid_names.c
tmlspec-archive/: tmlspec-0.0.1.md  tmlspec-0.0.2.md  tmlspec-0.0.3.md  tmlspec-0.0.4.md  tmlspec-0.0.5.md  tmlspec-0.0.6.md  tmlspec-0.0.7.md
